--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: metareport
 Type: Package
-Title: using opencpu server to render rmarkdown document on user uploaded data table
-Version: 0.2
+Title: Metalab report upon provided templates
+Version: 0.0.7
 Authors@R: 
     person(given = "Zhibin",
            family = "Ning",
            role = c("aut", "cre"),
            email = "ningzhibin@gmail.com")
 Maintainer: Ning Zhibin <ningzhibin@gmail.com>
-Description: This package provides a way for general user to upload a data table, doing the analysis on an R server, and return the report from a browser or using API. In this package, an opencpu server was used to generate a quick report using rmarkdonw template. The package is an update of the old rmdocpu one. install ningzhibin/metalab from github first before usage.
+Description: A wrapper function of rmarkdown::render for metalab report generation
 License: GNU
 Encoding: UTF-8
 LazyData: true
@@ -24,5 +24,8 @@ Imports:
   shiny,
   tidyverse,
   DT,
-  metalab
+  rmetalab,
+  rio,
+  factoextra,
+  pheatmap
   
