--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,3 +1,17 @@
 ^\.Rprofile$
 ^.*\.Rproj$
 ^\.Rproj\.user$
+
+.RData
+.git
+.Rhistory
+
+run_test.r
+template_test_oldway.Rmd
+
+report_output.html
+
+inst/extdata/debug
+inst/rmd/archived
+
+
